manifests/mtls/strict.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
